# mdtasks

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  install  mdtasks.toml
.github/workflows/: ci.yml  release.yml
scripts/: enforce.sh  install.sh  release.sh
src/: main.rs
tasks/: 001-mvp.md  002-test-the-add-command.md  003-implement-done-command.md  004-implement-start-command.md  005-implement-edit-command.md  006-add-configuration-file-support.md  007-implement-note-command.md  008-add-task-templates.md  009-add-git-integration.md  010-add-github-issues-sync.md  011-add-enhanced-filtering.md  012-add-cursor-rules-for-task-management-enforcement.md  012-update-subtask-parsing-to-support-both-checklist-and-subtasks-sections-defaulting-to-subtasks.md  013-add-checklist-item-command.md  014-fix-bug-done-command-should-mark-subtasks-as-complete.md  015-test-task-for-bug-fix.md  016-add-github-actions-cicd-and-release-automation.md  017-test-task-for-field-updates.md  018-test-all-commands-functionality.md  019-test-empty-checklist-fix.md  020-test-empty-checklist-fix---after-install.md  021-add-git-integration-for-task-based-branching.md  022-test-git-finish-with-task-file-commit.md  023-add-cleanup-command-for-done-tasks.md  023-rename-git-finish-to-git-done-and-add-pr-creation.md  023-test-fixed-git-finish.md  023-test-recovered-feature-prefix.md  024-test-feature-branch-prefix.md  024-test-task.md  025-test-draft-pr-creation.md  025-test-draft-pr-fix.md
