[package]
name = "mdtasks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
gray_matter = "0.2"  # Parse front-matter
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.3"  # Directory walking
chrono = { version = "0.4", features = ["serde"] }
