[package]
name = "mdtasks"
version = "0.1.0"
edition = "2021"
description = "A command-line task manager that uses markdown files for task storage"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/crooy/mdtasks"
keywords = ["cli", "task-manager", "markdown", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdtasks"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
gray_matter = "0.2"  # Parse front-matter
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.3"  # Directory walking
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"  # TOML config file parsing
shellexpand = "3.0"  # Path expansion with ~
